--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -9,14 +9,15 @@ output:
 ## Loading and preprocessing the data  
 
 ```{r load_process_data}
-#download the zipfile
-download.file("https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip", "activity.zip")
+#download, unzip and read file the zipfile
+if(!file.exists("activity.zip")){
+        download.file("https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip", "activity.zip")
+        unzip("activity.zip")
+}
 
-#unzip the file
-unzip("activity.zip")
-
-# read the data from unzipped csv file
+#read file
 activity <- read.csv("activity.csv")
+
 # convert date column to data format
 activity$date <- as.Date(as.character(activity[["date"]]), "%Y-%m-%d")
 ```
@@ -27,7 +28,7 @@ library(ggplot2)
 library(dplyr)
 
 #get total steps in each day
-totalStepsPerDay <- activity %>% group_by(date) %>% summarize(total.steps = sum(steps))
+totalStepsPerDay <- activity %>% group_by(date) %>% summarize(total.steps = sum(steps, na.rm = TRUE))
 
 #plot histogram of total steps per day
 g <- ggplot(totalStepsPerDay, aes(total.steps))
@@ -76,7 +77,7 @@ activity$steps.imputed <- apply(activity, 1, function(x) {
 sum(is.na(activity$steps.imputed))
 
 #get total (imputed) steps in each day 
-totalStepsPerDayImputed <- activity %>% group_by(date) %>% summarize(total.steps.imputed = sum(steps.imputed))
+totalStepsPerDayImputed <- activity %>% group_by(date) %>% summarize(total.steps.imputed = sum(steps.imputed, na.rm = TRUE))
 
 #plot histogram of total steps per day
 g <- ggplot(totalStepsPerDayImputed, aes(total.steps.imputed))
